[package]
name = "rust-grpc-helloworld"
version = "0.1.0"
authors = ["GitStonic <kingstonicthe1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.3.0"
protobuf = "2.8.1"
futures = "0.1.29"
grpcio = "0.4"
log = "0.4"
